 o add `getIdentificationFragments` and `getQuantitationSpectra`; close #89
   [2015-07-28 Tue]
 o use new loess model in master creation (now based on m-estimator instead of
   least squares, identical to retention time model in classical synergise
   workflow; see #107 for details) [2016-01-23 Sat]
 o use just unique peptides in master creation (see #107) [2016-01-23 Sat]

CHANGES IN VERSION 1.11.2
-------------------------
 o fixing bug introduced in 1.11.1 when coercing from
   Synapter to MSnSet object - see this post on the support forum for
   details https://support.bioconductor.org/p/71087/ <2015-09-27 Sun>

CHANGES IN VERSION 1.11.1
-------------------------
 o avoiding error when some fcols are missing when coercing from
   Synapter to MSnSet object - see this post on the support forum for
   details https://support.bioconductor.org/p/71087/ <2015-09-07 Mon>

CHANGES IN VERSION 1.9.5
------------------------
 o update cross reference to qvalue::plot.qvalue in Synapter man page;
   closes #86 [2015-03-31 Tue]

CHANGES IN VERSION 1.9.4
------------------------
 o use biocstyle [2015-01-23 Fri]
 o use requireNamespace [2015-01-23 Fri]

CHANGES IN VERSION 1.9.3
------------------------
 o Filter entries in quantiation final peptides and Pep3D data that don't match
   in their intensity valus; see #42 for details. [2014-11-26 Wed]

CHANGES IN VERSION 1.9.2
------------------------
 o Only suggesting tcltk and tcltk2, as gui is now deprecated
   [2014-11-21 Fri]

CHANGES IN VERSION 1.9.1
------------------------
 o Deprecating synatperGUI [2014-11-10 Mon]
 o Directing questions to the Bioc support site [2014-11-10 Mon]

CHANGES IN VERSION 1.9.0
------------------------
 o new devel version for Bioc 3.1

CHANGES IN VERSION 1.7.0
------------------------
 o Deprecating synatperGUI [2014-11-10 Mon]
 o Directing questions to the Bioc support site [2014-11-10 Mon]

CHANGES IN VERSION 1.5.7
------------------------